# strawberryERP

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  BUILD_STATE.md  CLAUDE_HANDOFF.md  Dockerfile  INTEGRATION_SPEC.md  PRODUCTION_READINESS.md  README.md  REVIEW.md  docker-compose.portal.yml  docker-compose.yml  package-lock.json  package.json  vitest.config.ts  vitest.server-only-stub.ts  vitest.setup.ts
.claude/: launch.json
docs/: README.md  REGIONAL_DIRECTOR_UI_SPEC.md  RESELLER_ADMIN_UI_SPEC.md  (+27 more)
frappe_app/lebtech_partner_platform/: MANIFEST.in  README.md  pyproject.toml
frappe_app/lebtech_partner_platform/lebtech_partner_platform/: exhibition_2026_data.py  hooks.py  modules.txt  scale_seed.py  seed.py  test_validators.py  validators.py
frappe_app/lebtech_partner_platform/lebtech_partner_platform/api/: _pagination.py  _totp.py  accounting.py  api_keys.py  calls.py  commissions.py  countries.py  customers.py  import_export.py  integrations.py  invoices.py  leads.py  operations.py  receipts.py  reports.py  security.py  settings.py  slots.py  test_accounting.py  test_api_keys.py  test_assigned_user_fieldtype.py  test_calls.py  test_countries.py  test_leads.py  test_operations_resellers.py  test_pagination.py  test_totp.py  test_white_label.py  two_factor.py  whatsapp.py
frappe_app/lebtech_partner_platform/lebtech_partner_platform/fixtures/: currency_setting.json  payment_method.json
frappe_app/lebtech_partner_platform/lebtech_partner_platform/validation/: __init__.py  bootstrap.py  operations.py  permission_matrix.py
(+796 files in other folders)
